--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body {
   width: 70%;
   height: 90%;
   overflow: hidden;
-  margin: 80px auto 0;
+  margin: auto;
   padding: 30px;
   font-weight: 200;
   font-size: 200%;
@@ -235,7 +235,7 @@ pre {
 .progress-bar {
   width: 0%;
   height: 3px;
-  background-color: #b4b4b4;
+  background-color: #44a4dd;
   -webkit-transition: width 0.05s ease-out;
   -moz-transition: width 0.05s ease-out;
   -o-transition: width 0.05s ease-out;
