--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ body {
   width: 70%;
   height: 90%;
   overflow: hidden;
-  margin: 80px auto 0;
+  margin: auto;
   padding: 30px;
 
   font-weight: 200;
@@ -144,7 +144,7 @@ pre {
 .progress-bar {
   width: 0%;
   height: 3px;
-  background-color: #b4b4b4;
+  background-color: #44a4dd;
 
   -webkit-transition: width 0.05s ease-out;
   -moz-transition: width 0.05s ease-out;
