feat(template): add permanent-link

--- a/default.mustache
+++ b/default.mustache
@@ -14,5 +14,6 @@
   <div class="controls">
     <div class="arrow prev"></div>
     <div class="arrow next"></div>
+    <div class="permanent-link"></div>
   </div>
 {{/controls}}
