--- a/style.scss
+++ b/style.scss
@@ -76,6 +76,11 @@ body {
   cursor: pointer;
 }
 
+.permanent-link{
+  background-image: url("http://azu.github.io/cleaver-clear-theme/links.svg");
+  background-size: 100% 100%;
+}
+
 h1 {
   font-size: 300%;
   line-height: 1.2;
