--- a/style.css
+++ b/style.css
@@ -178,8 +178,12 @@ body {
   cursor: pointer; }
 
 .permanent-link {
-  background-image: url("http://azu.github.io/cleaver-clear-theme/hyperlink.svg");
-  background-size: 100% 100%; }
+  float: left;
+  width: 50px;
+  height: 50px; }
+  .permanent-link svg {
+    width: 60px;
+    height: 60px; }
 
 h1 {
   font-size: 300%;
