--- a/style.scss
+++ b/style.scss
@@ -76,9 +76,16 @@ body {
   cursor: pointer;
 }
 
-.permanent-link{
-  background-image: url("http://azu.github.io/cleaver-clear-theme/hyperlink.svg");
-  background-size: 100% 100%;
+.permanent-link {
+  //  background-image: url("http://azu.github.io/cleaver-clear-theme/hyperlink.svg");
+  //  background-size: 100% 100%;
+  float: left;
+  width: 50px;
+  height: 50px;
+  svg {
+    width: 60px;
+    height: 60px;
+  }
 }
 
 h1 {
@@ -259,3 +266,4 @@ pre {
     page-break-before: always;
   }
 }
+
