--- a/style.css
+++ b/style.css
@@ -114,8 +114,12 @@ pre .diff .change {
 pre .chunk {
   color: #aaaaaa; }
 
+@font-face {
+  font-style: italic;
+  font-weight: 700;
+  font-family: 'PT Mono'; }
 body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font: 25px/2 "PT Sans", sans-serif;
   color: #222;
   background-color: #f7f7f7;
   font-size: 100%; }
@@ -130,12 +134,15 @@ body {
 .slide-content {
   width: 70%;
   height: 90%;
-  overflow: hidden;
   margin: auto;
   padding: 30px;
   font-weight: 200;
   font-size: 200%;
   line-height: 1.375; }
+  .slide-content > h1 {
+    text-align: center;
+    margin-left: calc(50% - 50vw);
+    margin-right: calc(50% - 50vw); }
 
 .controls {
   position: absolute;
@@ -192,7 +199,7 @@ h1 {
   font-size: 300%;
   line-height: 1.2;
   text-align: center;
-  margin: 170px 0 0; }
+  margin: 1em 0 0; }
 
 h2 {
   font-size: 100%;
@@ -208,10 +215,14 @@ h3 {
   margin: 0;
   padding-bottom: 15px; }
 
-ul {
-  padding: 20px 0 0 60px;
+.slide ol, .slide ul {
+  margin: 50px 0;
+  counter-reset: list;
   font-weight: 200;
-  line-height: 1.375; }
+  line-height: 1.5; }
+
+.slide ol ol, .slide ol ul, .slide ul ol, .slide ul ul {
+  margin: 0px 0px 0px 2em; }
 
 .author h1 {
   font-size: 170%;
@@ -266,7 +277,7 @@ pre {
     width: 100%; }
 
   h1 {
-    margin-top: 120px; }
+    margin-top: 0.8em; }
 
   .prev, .prev:hover {
     border-right-color: rgba(135, 135, 135, 0.5); }
@@ -284,7 +295,7 @@ pre {
     height: 80%; }
 
   h1 {
-    margin-top: 50px; }
+    margin-top: 0.5em; }
 
   ul {
     padding-left: 25px; } }
@@ -327,3 +338,12 @@ pre {
   .slide:nth-child(even) {
     /* 2 slides per page */
     page-break-before: always; } }
+.background-image-center, .full, .fit {
+  background: no-repeat center top; }
+
+/* user extension */
+.full {
+  background-size: cover; }
+
+.fit {
+  background-size: contain; }
